--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "qrcode.react": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
