--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
     "start": "vite preview --port 3000"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "qrcode.react": "^4.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
