--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.12.2",
+    "jsonwebtoken": "^9.0.2",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react-router-dom": "^7.9.1"
   }
 }
